--- a/.env
+++ b/.env
@@ -10,4 +10,4 @@ PORT=3520
 
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:1212@localhost:5432/ts_jwt?schema=public"
+DATABASE_URL="postgresql://postgres:9027931212@localhost:5432/set"
