--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
